<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:text="@string/Level"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.32"
            android:text="@string/cur_level"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/Score"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.30"
            android:text="@string/cur_score"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="78dp"
                android:layout_height="wrap_content"
                android:text="@string/Target"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="51dp"
                    android:layout_height="wrap_content"
                    android:text="@string/target_score"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/LinearLayout04"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/LinearLayout03"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent" >

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:text="@string/Time"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/found_words"
        android:textAppearance="?android:attr/textAppearanceLarge" />
 <ScrollView
        android:id="@+id/sv"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_weight="0.59" >
    <EditText
        android:id="@+id/editText1"
        android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:focusable="false"
            android:longClickable="false"
            android:selectAllOnFocus="false" >

    </EditText>
    
    </ScrollView>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_words"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="307dp"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/Button07"
            android:layout_width="38dp"
            android:layout_height="wrap_content"
            android:text="@string/text1"
            android:visibility="invisible" />

        <Button
            android:id="@+id/Button06"
            android:layout_width="38dp"
            android:layout_height="wrap_content"
            android:text="@string/text1"
            android:visibility="invisible" />

        <Button
            android:id="@+id/Button05"
            android:layout_width="38dp"
            android:layout_height="wrap_content"
            android:text="@string/text1"
            android:visibility="invisible" />

        <Button
            android:id="@+id/Button04"
            android:layout_width="38dp"
            android:layout_height="wrap_content"
            android:text="@string/text1"
            android:visibility="invisible" />

        <Button
            android:id="@+id/Button03"
            android:layout_width="38dp"
            android:layout_height="wrap_content"
            android:text="@string/text1"
            android:visibility="invisible" />

        <Button
            android:id="@+id/Button02"
            android:layout_width="38dp"
            android:layout_height="wrap_content"
            android:text="@string/text1"
            android:visibility="invisible" />

        <Button
            android:id="@+id/Button01"
            android:layout_width="38dp"
            android:layout_height="wrap_content"
            android:text="@string/text1"
            android:visibility="invisible" />

        <Button
            android:id="@+id/button2"
            android:layout_width="38dp"
            android:layout_height="wrap_content"
            android:text="@string/text1"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout05"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/Button14"
            android:layout_width="38dp"
            android:layout_height="wrap_content"
            android:text="@string/text1" />

        <Button
            android:id="@+id/Button12"
            android:layout_width="38dp"
            android:layout_height="wrap_content"
            android:text="@string/text1" />

        <Button
            android:id="@+id/Button10"
            android:layout_width="38dp"
            android:layout_height="wrap_content"
            android:text="@string/text1" />

        <Button
            android:id="@+id/Button11"
            android:layout_width="38dp"
            android:layout_height="wrap_content"
            android:text="@string/text1" />

        <Button
            android:id="@+id/Button09"
            android:layout_width="38dp"
            android:layout_height="wrap_content"
            android:text="@string/text1" />

        <Button
            android:id="@+id/Button15"
            android:layout_width="38dp"
            android:layout_height="wrap_content"
            android:text="@string/text1" />

        <Button
            android:id="@+id/Button13"
            android:layout_width="38dp"
            android:layout_height="wrap_content"
            android:text="@string/text1" />

        <Button
            android:id="@+id/Button08"
            android:layout_width="38dp"
            android:layout_height="wrap_content"
            android:text="@string/text1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/linearLayout8"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent" >
        </LinearLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="9dp"
            android:text="@string/empty"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.32"
            android:text="@string/Submit" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.23"
            android:text="@string/shuffle" />

    </LinearLayout>

</LinearLayout>